--- a/index.html
+++ b/index.html
@@ -7,16 +7,93 @@
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
-    />
     <link rel="stylesheet" href="index.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Drones Page</title>
   </head>
   <body>
+    <div class="top-bg-container">
+      <div class="light-streaks"></div>
+      <div class="blue-col"></div>
+    </div>
+    <div class="container">
+      <nav>
+        <a href="#" class="logo"><span>Drone</span>.Series</a>
+        <img src="assets/menu.svg" alt="menu" class="menu-btn" />
+        <ul>
+          <li class="exit-btn"><img src="assets/exit.svg" alt="exit" /></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Races</a></li>
+          <li><a href="#">Rigister</a></li>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+      <main>
+        <div class="content">
+          <div class="type">
+            <h1>DRONE RACING GONE WILD</h1>
+            <p>
+              Register now for the ultimate drone racing event. 5 mile courses
+              and over $10 million in prize money!
+            </p>
+          </div>
+          <div class="drone-container">
+            <img src="assets/blur.png" alt="blur" class="blur" />
+            <img src="assets/drone.png" alt="drone" class="drone" />
+          </div>
+        </div>
+      </main>
+    </div>
+    <section class="quote">
+      <blockquote>
+        “the stadium is simply unreal. scrimba hall will make this the best
+        drone racing event ever, period.”
+      </blockquote>
+      <cite>anonymous guy</cite>
+    </section>
+    <section class="gallery">
+      <div class="footage-content">
+        <h2>last year’s footage</h2>
+        <p>
+          With over 5,000 participants, 2020 featured some of the most amazing
+          drone races from the most competitive field ever seen.
+        </p>
+        <p>
+          In 2021, we’re about to double the excitement with 10,000 race
+          participants and 100,000 fans!
+        </p>
+      </div>
+      <div class="gallery-container">
+        <img src="assets/footage-1.jpg" alt="footage" />
+        <img src="assets/footage-2.jpg" alt="footage" />
+        <img src="assets/footage-3.jpg" alt="footage" />
+        <img src="assets/footage-4.jpg" alt="footage" />
+        <img src="assets/footage-5.jpg" alt="footage" />
+      </div>
+    </section>
+    <section class="contact">
+      <div class="cols-2">
+        <div class="form-container">
+          <div class="form-el">
+            <label for="name">Name</label>
+            <input type="text" id="name" />
+          </div>
+          <div class="form-el">
+            <label for="email">Email</label>
+            <input type="email" id="email" />
+          </div>
+          <button>register now!</button>
+        </div>
+        <div class="other-info">
+          <ul>
+            <li>1-555-555-3298</li>
+            <li><a href="#">some@email.com</a></li>
+          </ul>
+        </div>
+      </div>
+    </section>
     <script type="module" src="index.js"></script>
   </body>
 </html>
