finishing the mobile css

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
       </div>
     </section>
     <section class="contact">
+      <h3>register for the event!</h3>
       <div class="cols-2">
         <div class="form-container">
           <div class="form-el">
